--- a/package.json
+++ b/package.json
@@ -2,14 +2,17 @@
   "name": "react-homework-template",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ToreadorUa.github.io/goit-react-hw-04-feedback/",
+  "homepage": "https://ToreadorUa.github.io/goit-react-hw-02-feedback/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.3",
     "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
+    "@types/estree": "^1.0.1",
+    "mime": "^3.0.0",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "styled-components": "^6.0.5",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
@@ -37,4 +40,5 @@
       "last 1 safari version"
     ]
   }
+  
 }
